<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical"
    tools:context=".ui.SettingActivity">

    <RelativeLayout
        android:id="@+id/rl_blue_tooth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_blue_tooth"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

        <TextView
            android:id="@+id/tv_blue_tooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/iv_arrow_2"
            android:src="@drawable/icon_single_avatar"
            android:text="6F-7F-23-4D-23"
            android:textColor="@color/text_grey_deep_2"
            android:textSize="16sp"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/rl_ptt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_ptt_key"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/rl_reconnect"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_connect_again"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

        <TextView
            android:id="@+id/tv_reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/iv_arrow_4"
            android:src="@drawable/icon_single_avatar"
            android:text="自动"
            android:textColor="@color/text_grey_deep_2"
            android:textSize="16sp"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/rl_hung_up_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_disconnect_time"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

        <TextView
            android:id="@+id/tv_default_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/iv_arrow_5"
            android:src="@drawable/icon_single_avatar"
            android:text="15秒"
            android:textColor="@color/text_grey_deep_2"
            android:textSize="16sp"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/rl_reboot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_start_reboot"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/rl_version"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_version"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/iv_arrow_7"
            android:src="@drawable/icon_single_avatar"
            android:text="V1.0.2"
            android:textColor="@color/text_grey_deep_2"
            android:textSize="16sp"/>


    </RelativeLayout>

</LinearLayout>
