<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical"
    tools:context=".ui.PersonalProfileActivity">

    <RelativeLayout
        android:id="@+id/rl_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_avatar"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/iv_arrow_1"
            android:src="@drawable/icon_single_avatar"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/rl_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_name"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/iv_arrow_2"
            android:src="@drawable/icon_single_avatar"
            android:text="李荣浩"
            android:textColor="@color/text_grey_deep_2"
            android:textSize="16sp"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/rl_job"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_job"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

        <TextView
            android:id="@+id/tv_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/iv_arrow_3"
            android:src="@drawable/icon_single_avatar"
            android:text="西湖区－中队－队长"
            android:textColor="@color/text_grey_deep_2"
            android:textSize="16sp"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/rl_options"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_options"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

        <TextView
            android:id="@+id/tv_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/iv_arrow_4"
            android:src="@drawable/icon_single_avatar"
            android:text="C2"
            android:textColor="@color/text_grey_deep_2"
            android:textSize="16sp"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/rl_default_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_default_group"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

        <TextView
            android:id="@+id/tv_default_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/iv_arrow_5"
            android:src="@drawable/icon_single_avatar"
            android:text="西湖中队"
            android:textColor="@color/text_grey_deep_2"
            android:textSize="16sp"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/rl_state"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_state"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/iv_arrow_6"
            android:src="@drawable/icon_single_avatar"
            android:text="在线"
            android:textColor="@color/text_grey_deep_2"
            android:textSize="16sp"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/rl_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_divide_type"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/iv_arrow_7"
            android:src="@drawable/icon_single_avatar"
            android:text="CT－200"
            android:textColor="@color/text_grey_deep_2"
            android:textSize="16sp"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/rl_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_build_time"
            android:textColor="@color/text_grey_deep"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_arrow_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_recive"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/iv_arrow_8"
            android:src="@drawable/icon_single_avatar"
            android:text="2014年12月4日"
            android:textColor="@color/text_grey_deep_2"
            android:textSize="16sp"/>


    </RelativeLayout>

</LinearLayout>
