<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3d4147">

    <ImageView
        android:id="@+id/iv_voice_state_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/icon_half_voice_normal"/>

    <ImageView
        android:id="@+id/iv_ptt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/img_half_ptt_normal"/>

    <RelativeLayout
        android:id="@+id/rl_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_voice_state_long"
        android:layout_marginTop="11dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_voice_state_point"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:src="@drawable/icon_free"/>

        <TextView
            android:id="@+id/tv_voice_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@+id/iv_voice_state_point"
            android:shadowColor="#66000000"
            android:shadowDy="2"
            android:text="空闲"
            android:textColor="@color/text_grey"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="滨江区第三中队"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <ImageView
            android:id="@+id/iv_talk_icon"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_group_name"
            android:src="@drawable/icon_single_avatar"/>
    </RelativeLayout>


    <ImageView
        android:id="@+id/iv_more_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="2dp"
        android:padding="8dp"
        android:src="@drawable/img_more_normal"/>

    <ImageView
        android:id="@+id/iv_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="2dp"
        android:padding="8dp"
        android:src="@drawable/img_open"/>

    <RelativeLayout
        android:id="@+id/rl_more_options"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        android:background="#3d4147">

        <LinearLayout
            android:id="@+id/ll_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_options_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/img_meeting"/>

            <ImageView
                android:id="@+id/iv_options_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/img_message"/>

            <ImageView
                android:id="@+id/iv_options_police"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/img_alarm"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_temp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_meeting"
                android:textColor="@color/white"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_message"
                android:textColor="@color/white"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_police"
                android:textColor="@color/white"
                android:textSize="13sp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_more_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="2dp"
            android:padding="8dp"
            android:src="@drawable/img_more_opened"/>


    </RelativeLayout>


</RelativeLayout>
